Table Compnent updated ,overflow issue on popup fixed, actionsReducer for table actions added

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    position: relative;
+    overflow-x: hidden;
+}
